# eHTTPd

./: CMakeLists.txt  README.md
doc/: Compliance.md  Implementation.md
include/: HTTPDConfig.hpp  Types.hpp
include/Container/: CTVector.hpp  RingBuffer.hpp  TmpString.hpp
include/Network/: InternalErrors.hpp  Socket.hpp
include/Network/Clients/: HTTP.hpp
include/Network/Common/: HTTPMessage.hpp  HeadersArray.hpp
include/Network/Servers/: HTTP.hpp  Parser.hpp  Route.hpp
include/Path/: Normalization.hpp
include/Protocol/HTTP/: Codes.hpp  HeaderMap.hpp  Methods.hpp  RequestLine.hpp
include/Reflection/: AutoEnum.hpp
include/Streams/: Streams.hpp
include/Strings/: CTString.hpp  ROString.hpp  RWString.hpp
src/: Normalization.cpp  ROString.cpp
tests/: CMakeLists.txt  HeadersParsing.cpp  Makefile  PathNormalization.cpp  RouteTesting.cpp  eurl.cpp  index.htm  upload.htm
